--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,34 @@ header h2 {
 	background: url("/images/steps.png") no-repeat top center;
 }
 
+.why {
+	background: url("/images/why_1.png") repeat-x;
+}
+
+#why {
+	background: url("/images/why.png") no-repeat top center;
+}
+
+/*.works {*/
+	/*background: url("/images/works_1.png") repeat-x;*/
+/*}*/
+
+/*#works {*/
+	/*background: url("/images/works.png") no-repeat top center;*/
+/*}*/
+
+/*#works .mb {*/
+	/*margin-bottom: 30px;*/
+/*}*/
+
+/*.guarantee {*/
+	/*background: url("/images/guarantee_1.png") repeat-x;*/
+/*}*/
+
+/*#guarantee {*/
+	/*background: url("/images/guarantee.png") no-repeat top center;*/
+/*}*/
+
 #advantages h2, #steps h2, #why h2, #works h2  {
 	font-family: "RobotoCondensedLight";
 	margin-bottom: 50px;
@@ -126,12 +154,12 @@ header h2 {
 }
 
 #steps .button {
-	margin-top: 125px;
+	margin-top: 85px;
 }
 
-#guarantee .button {
-	margin-top: 22px;
-}
+/*#guarantee .button {*/
+	/*margin-top: 22px;*/
+/*}*/
 
 .button, #popup input[type="submit"] {
 	color: #f9e00b;
@@ -212,3 +240,36 @@ header h2 {
 .step:nth-child(7) {
 	margin: 30px 0 0 212px;
 }
+
+/*#works .site img {*/
+	/*margin-top: 11px;*/
+/*}*/
+
+/*#works .site {*/
+	/*background: url("/images/laptop.png") no-repeat center center;*/
+	/*height: 159px;*/
+	/*width: 229px;*/
+	/*margin: 0 auto;*/
+/*}*/
+
+/*#works .cell {*/
+	/*padding: 0 5px;*/
+/*}*/
+
+/*#works .cell:nth-child(1) {*/
+	/*text-align: right;*/
+/*}*/
+
+/*#works .cell:nth-child(2) {*/
+	/*color: #ab1749;*/
+/*}*/
+
+/*#guarantee .icon {*/
+	/*text-align: right;*/
+	/*margin-top: 35px;*/
+/*}*/
+
+/*#guarantee .guarantee_text {*/
+	/*margin-top: 60px;*/
+	/*text-align: left;*/
+/*}*/
